@@ -48,6 +48,7 @@ xx/xx/2006 - x.xx.x - .
 	  format version and not the NTFS version of the imaged volume which is
 	  totally useless.  (Anton)
 	- ntfsclone: Make ntfsclone image format extensible.  (Anton)
+	- ntfsclone: Fix endianness problems.  (Anton)
 
 21/06/2006 - 1.13.1 - Various fixes.
 
